DevOps/CI/manifest-main/argocd/argocd-v2.6.4-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-application-controller-network-policy
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 8082
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-applicationset-controller-network-policy
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 7000
      protocol: TCP
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-applicationset-controller
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-dex-server-network-policy
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-server
    ports:
    - port: 5556
      protocol: TCP
    - port: 5557
      protocol: TCP
  - from:
    - namespaceSelector: {}
    ports:
    - port: 5558
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-dex-server
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-notifications-controller-network-policy
spec:
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 9001
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-notifications-controller
  policyTypes:
  - Ingress
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: argocd-redis-network-policy
# spec:
#   egress:
#   - ports:
#     - port: 53
#       protocol: UDP
#     - port: 53
#       protocol: TCP
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           app.kubernetes.io/name: argocd-server
#     - podSelector:
#         matchLabels:
#           app.kubernetes.io/name: argocd-repo-server
#     - podSelector:
#         matchLabels:
#           app.kubernetes.io/name: argocd-application-controller
#     ports:
#     - port: 6379
#       protocol: TCP
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: argocd-redis
#   policyTypes:
#   - Ingress
#   - Egress
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: argocd-repo-server-network-policy
# spec:
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           app.kubernetes.io/name: argocd-server
#     - podSelector:
#         matchLabels:
#           app.kubernetes.io/name: argocd-application-controller
#     - podSelector:
#         matchLabels:
#           app.kubernetes.io/name: argocd-notifications-controller
#     ports:
#     - port: 8081
#       protocol: TCP
#   - from:
#     - namespaceSelector: {}
#     ports:
#     - port: 8084
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: argocd-repo-server
#   policyTypes:
#   - Ingress
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: argocd-server-network-policy
# spec:
#   ingress:
#   - {}
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: argocd-server
#   policyTypes:
#   - Ingress
